{
  "version": 4,
  "terraform_version": "0.12.0",
  "serial": 86,
  "lineage": "1b18a948-8e9e-60d5-1770-50bb7d46b0ee",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c6b1d09930fac512",
            "arn": "arn:aws:ec2:us-east-1:557668857118:instance/i-067ea3e00a7dc6252",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-067ea3e00a7dc6252",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1d7aafc8525e1f2",
            "private_dns": "ip-10-1-1-98.ec2.internal",
            "private_ip": "10.1.1.98",
            "public_dns": "ec2-54-225-29-145.compute-1.amazonaws.com",
            "public_ip": "54.225.29.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 0,
                "volume_id": "vol-02e38a2e3a3d46c2f",
                "volume_size": 50,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aa540f974f6cdd3b",
            "tags": {
              "Name": "test"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "test"
            },
            "vpc_security_group_ids": [
              "sg-0f1cde4af72412b3a"
            ]
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:loadbalancer/app/tf-lb-20190604112937817800000004/79e0b7f0682d84e5",
            "arn_suffix": "app/tf-lb-20190604112937817800000004/79e0b7f0682d84e5",
            "dns_name": "tf-lb-20190604112937817800000004-493287172.us-east-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:557668857118:loadbalancer/app/tf-lb-20190604112937817800000004/79e0b7f0682d84e5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20190604112937817800000004",
            "security_groups": [
              "sg-050c130fbc3de94ce"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-052454610f0834ff4"
              },
              {
                "subnet_id": "subnet-0aa540f974f6cdd3b"
              }
            ],
            "subnets": [
              "subnet-052454610f0834ff4",
              "subnet-0aa540f974f6cdd3b"
            ],
            "vpc_id": "vpc-04114ed591b750e9a",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:listener/app/tf-lb-20190604112937817800000004/79e0b7f0682d84e5/201d6561740b0d11",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:557668857118:listener/app/tf-lb-20190604112937817800000004/79e0b7f0682d84e5/201d6561740b0d11",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:loadbalancer/app/tf-lb-20190604112937817800000004/79e0b7f0682d84e5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/tf-20190604112928798600000003/3ba2b27391055ca1",
            "arn_suffix": "targetgroup/tf-20190604112928798600000003/3ba2b27391055ca1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/tf-20190604112928798600000003/3ba2b27391055ca1",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-20190604112928798600000003",
            "port": 8080,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04114ed591b750e9a"
          }
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "this",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/tf-20190604112928798600000003/3ba2b27391055ca1-20190604113050920900000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:557668857118:targetgroup/tf-20190604112928798600000003/3ba2b27391055ca1",
            "target_id": "i-067ea3e00a7dc6252"
          },
          "depends_on": [
            "aws_lb_target_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557668857118:security-group/sg-050c130fbc3de94ce",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "EC2 egress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1cde4af72412b3a"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-050c130fbc3de94ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "test-alb-20190604112928797400000001",
            "name_prefix": "test-alb-",
            "owner_id": "557668857118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04114ed591b750e9a"
          }
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:557668857118:security-group/sg-0f1cde4af72412b3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Full egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1cde4af72412b3a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ALB ingress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050c130fbc3de94ce"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "Self ingress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "test-ec2-20190604112928798100000002",
            "name_prefix": "test-ec2-",
            "owner_id": "557668857118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04114ed591b750e9a"
          }
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "EC2 egress",
            "from_port": 8080,
            "id": "sgrule-762804073",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-050c130fbc3de94ce",
            "self": false,
            "source_security_group_id": "sg-0f1cde4af72412b3a",
            "to_port": 8080,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.alb",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP ingress",
            "from_port": 80,
            "id": "sgrule-3276559542",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-050c130fbc3de94ce",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS ingress",
            "from_port": 443,
            "id": "sgrule-2025471341",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-050c130fbc3de94ce",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_egress_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Full egress",
            "from_port": 0,
            "id": "sgrule-2197369074",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f1cde4af72412b3a",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "depends_on": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "ALB ingress",
            "from_port": 8080,
            "id": "sgrule-3396130782",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f1cde4af72412b3a",
            "self": false,
            "source_security_group_id": "sg-050c130fbc3de94ce",
            "to_port": 8080,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.alb",
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Self ingress",
            "from_port": 0,
            "id": "sgrule-3249814302",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0f1cde4af72412b3a",
            "self": false,
            "source_security_group_id": "sg-0f1cde4af72412b3a",
            "to_port": 0,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.ec2"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_open",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "for ssh",
            "from_port": 22,
            "id": "sgrule-3299451013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f1cde4af72412b3a",
            "self": false,
            "source_security_group_id": "sg-0f1cde4af72412b3a",
            "to_port": 22,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.ec2"
          ]
        }
      ]
    }
  ]
}